# SimplePathTracer

./: .gitignore  CMakeLists.txt  README.md  configure.sh
PythonModule/: Extensions.hpp  Module.cpp
examples/: PySptApp.py  SfmlDemo.cpp  basicScene.py  chromeDragon.py  preview.html
src/: AssimpLoader.cpp  AssimpLoader.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Debug.cpp  Debug.h  Face.cpp  Face.h  Gui.cpp  Gui.h  Image.cpp  Image.h  KdTree.cpp  KdTree.h  Light.cpp  Light.h  Material.cpp  Material.h  Node.cpp  Node.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  RenderSession.cpp  RenderSession.h  Renderer.cpp  Renderer.h  RenderingSession.cpp  RenderingSession.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  (+1 more)
